[tool]
[tool.poetry]
name = "dash-template"
version = "0.1.0"
description = ""
authors = ["Michel Metran <michelmetran@gmail.com>"]

[tool.poetry.dependencies]
python = ">=3.10.0,<3.11"
dash = ">=2.0,<2.9.1"

[tool.poetry.dev-dependencies]


[build-system]
build-backend = "poetry.masonry.api"
requires = ["poetry>=0.12"]
