[tool]
[tool.poetry]
name = "dash-template"
version = "0.1.0"
description = ""
authors = ["Michel Metran <michelmetran@gmail.com>"]

[tool.poetry.dependencies]
python = ">=3.8.0,<3.9"
numpy = "^1.22.2"
replit = "^3.2.4"
Flask = "^2.2.0"
dash = "^2.6.1"
plotly = "^5.10.0"

[tool.poetry.dev-dependencies]
debugpy = "^1.6.2"
python-lsp-server = {extras = ["yapf", "rope", "pyflakes"], version = "^1.5.0"}
toml = "^0.10.2"

[build-system]
build-backend = "poetry.masonry.api"
requires = ["poetry>=0.12"]
